announ declare