@@ -3,14 +3,10 @@ package edu.cqu.no1.dao.impl;
 import com.opensymphony.xwork2.util.logging.Logger;
 import com.opensymphony.xwork2.util.logging.LoggerFactory;
 import com.sun.istack.internal.NotNull;
-import com.sun.istack.internal.Nullable;
 import edu.cqu.no1.dao.*;
 import edu.cqu.no1.domain.TAnnouncement;
-import edu.cqu.no1.domain.TAnnouncementModel;
 import edu.cqu.no1.util.PageBean;
 import org.hibernate.Query;
-import org.hibernate.SQLQuery;
-import org.hibernate.annotations.NotFound;
 import org.springframework.context.ApplicationContext;
 import org.springframework.stereotype.Repository;
 
@@ -34,7 +30,6 @@ public class TAnnouncementDAOImpl extends BaseDaoImpl<TAnnouncement> implements 
     public static final String CHECKER_CODE = "checkerCode";
     public static final String CHECK_STATE = "checkState";
     public static final String ISDELETED = "isdeleted";
-
 
 
     public List findByAnnounTitle(Object announTitle) {
@@ -78,29 +73,94 @@ public class TAnnouncementDAOImpl extends BaseDaoImpl<TAnnouncement> implements 
 
 
     /**
-     * 根据公告ID获取公告的信息，包括发布者名称
-     *
-     * @param announId
+     * 根据公告类别获取公告的ID，名称
+     * @param typeName 公告类别名称
      * @return
      */
-    @Nullable
-    public TAnnouncementModel getAnnounById(String announId) {
-        log.debug("get a announcement with publisherName by announId");
+    @Override
+    public List findAnnounByType(String typeName, PageBean pageBean) {
+        log.debug("find TAnnouncement by type");
+        return findIndexSchoolAnnoument(null, null, typeName, pageBean);
+    }
+
+    public int findAnnounByTypeCount(String typeName) {
+        log.debug("find TAnnouncement count by type");
+        return findIndexSchoolAnnoumentCount(null, null, typeName);
+    }
+
+    //查询主页学校公告
+    @Override
+    public List findIndexSchoolAnnoument(String announTitle, Date publishTime, String typeName, PageBean pageBean) {
+        log.debug("find TAnnouncement by type");
         try {
-            String hql = "select new TAnnouncementModel(ta, tu.userName) from TAnnouncement ta, TUser tu where" +
-                    " ta.announId = :aID and ta.publisherCode = tu.userId";
-            Query query = getSessionFactory().getCurrentSession().createQuery(hql);
-            query.setString("aID", announId);
-            @SuppressWarnings("unchecked")
-            List<TAnnouncementModel> list = query.list();
-            if (list.size() > 0) {
-                return list.get(0);
+            String hql = "from TAnnouncement ta where ta.isdeleted = 'N' and ta.publishState = 'Y'" +
+                    " and ta.TAnnounType.announTypeName like :tName";
+            if (null != announTitle && !announTitle.trim().equals("")) {
+                hql += " and ta.announTitle like :announTitle";
             }
-            return null;
+            if (null != publishTime && !publishTime.toString().trim().equals("")) {
+                hql += " and ta.publishTime between :publishTime and :publishTime + 1";
+            }
+
+            Query query = getSessionFactory().getCurrentSession().createQuery(hql);
+
+            if (null != announTitle && !announTitle.trim().equals("")) {
+                query.setString("announTitle", "%" + announTitle + "%");
+            }
+
+            if (null != publishTime && !publishTime.toString().trim().equals("")) {
+                query.setDate("publishTime", publishTime);
+            }
+
+            query.setString("tName", "%" + typeName + "%");
+            if (null != pageBean) {
+                query.setFirstResult(pageBean.getBeginIndex());
+                query.setMaxResults(pageBean.getPageCapibility());
+            }
+            return query.list();
         } catch (RuntimeException e) {
-            log.error("get a announcement with publisherName by announId failed ", e);
+            log.error("find announcement by type failed " + e);
             throw e;
         }
+    }
+
+
+    public int findIndexSchoolAnnoumentCount(String announTitle, Date publishTime, String typeName) {
+        log.debug("find TAnnouncement count by type");
+        try {
+            String hql = "select count(*) from TAnnouncement where isdeleted = 'N'" +
+                    " and publishState = 'Y' and TAnnounType.announTypeName like :tName";
+            if (null != announTitle && !announTitle.trim().equals("")) {
+                hql += " and ta.announTitle like :announTitle";
+            }
+            if (null != publishTime && !publishTime.toString().trim().equals("")) {
+                hql += " and ta.publishTime between :publishTime and :publishTime + 1";
+            }
+            Query query = getSessionFactory().getCurrentSession().createQuery(hql);
+            if (null != announTitle && !announTitle.trim().equals("")) {
+                query.setString("announTitle", "%" + announTitle + "%");
+            }
+
+            if (null != publishTime && !publishTime.toString().trim().equals("")) {
+                query.setDate("publishTime", publishTime);
+            }
+            query.setString("tName", "%" + typeName + "%");
+            List list = query.list();
+            int count = 0;
+            if (list.size() > 0) {
+                count = new Integer("" + list.get(0));
+            }
+            return count;
+        } catch (RuntimeException e) {
+            log.error("find announcement count by type failed " + e);
+            throw e;
+        }
+
+    }
+
+    public static TAnnouncementDAO getFromApplicationContext(
+            ApplicationContext ctx) {
+        return (TAnnouncementDAO) ctx.getBean("TAnnouncementDAO");
     }
 
     /**
@@ -112,13 +172,13 @@ public class TAnnouncementDAOImpl extends BaseDaoImpl<TAnnouncement> implements 
      * @param pageBean
      * @return
      */
-    @NotNull
-    public List findStuTeatAnnoun(String number, String announName,
-                                  Date announDate, PageBean pageBean) {
-        log.debug("finding Student TAnnouncement instances");
+    @Override
+    public List getStuTeatAnnoun(String number, String announName,
+                                 Date announDate, PageBean pageBean) {
+        log.debug("finding Student or Teacher TAnnouncement instances");
         try {
-            String hql = "select new TAnnouncementModel(ta, tu.userName) from TAnnouncement ta, TUser tu where" +
-                    " ta.isdeleted = 'N' and ta.publisherCode = tu.userId and ta.publisherCode = :code";
+            String hql = "from TAnnouncement ta where" +
+                    " ta.isdeleted = 'N' and  ta.publisherCode = :code";
 
             if (null != announName && !announName.trim().equals("")) {
                 hql += " and ta.announTitle like :aName";
@@ -128,12 +188,14 @@ public class TAnnouncementDAOImpl extends BaseDaoImpl<TAnnouncement> implements 
             }
             Query query = getSessionFactory().getCurrentSession().createQuery(hql);
             query.setString("code", number);
+
             if (null != announName && !announName.trim().equals("")) {
                 query.setString("aName", "%" + announName + "%");
             }
             if (null != announDate && !announDate.toString().trim().equals("")) {
                 query.setDate("aDate", announDate);
             }
+
             if (null != pageBean) {
                 query.setFirstResult(pageBean.getBeginIndex());
                 query.setMaxResults(pageBean.getPageCapibility());
@@ -146,8 +208,18 @@ public class TAnnouncementDAOImpl extends BaseDaoImpl<TAnnouncement> implements 
 
     }
 
-    public int findStuTeaAnnounCount(String number, String announName,
-                                     Date announDate) {
+    /**
+     * 查询学生或老师公告数量
+     *
+     * @param number
+     * @param announName
+     * @param announDate
+     * @return
+     */
+
+    @Override
+    public int getStuTeaAnnounCount(String number, String announName,
+                                    Date announDate) {
         log.debug("finding StuTea count TAnnouncement instances");
         try {
             String hql = "select count(*) from TAnnouncement where isdeleted = 'N' and publisherCode = :code";
@@ -167,11 +239,12 @@ public class TAnnouncementDAOImpl extends BaseDaoImpl<TAnnouncement> implements 
                 query.setDate("aDate", announDate);
             }
             List list = query.list();
-            int count = 0;
-            if (list.size() > 0) {
-                count = new Integer("" + list.get(0));
+
+
+            if (list != null && list.size() > 0) {
+                return Integer.valueOf(list.get(0) + "");
             }
-            return count;
+            return 0;
         } catch (RuntimeException re) {
             log.error("find StuTea count failed", re);
             throw re;
@@ -187,13 +260,12 @@ public class TAnnouncementDAOImpl extends BaseDaoImpl<TAnnouncement> implements 
      * @param pageBean
      * @return
      */
-    @NotNull
-    public List findUnitAnnoun(String teaCode, String announName,
-                               Date announDate, PageBean pageBean) {
+    @Override
+    public List getUnitAnnoun(String teaCode, String announName,
+                              Date announDate, PageBean pageBean) {
         log.debug("finding unit TAnnouncement");
         try {
-            String hql = "select new TAnnouncementModel(ta, tu.userName) from TAnnouncement ta, TUser tu" +
-                    " where ta.isdeleted = 'N'";
+            String hql = "from TAnnouncement ta where ta.isdeleted = 'N'";
 
             if (null != announName && !announName.trim().equals("")) {
                 hql += " and ta.announTitle like :aName";
@@ -201,23 +273,21 @@ public class TAnnouncementDAOImpl extends BaseDaoImpl<TAnnouncement> implements 
             if (null != announDate && !announDate.toString().trim().equals("")) {
                 hql += " and ta.publishTime between :aDate and :aDate + 1";
             }
-            hql += " and ta.publisherCode = tu.userId and ta.publisherCode in (select" +
-                    " teaCode from TTeacher where teaCode = :code or ta.publisherCode in (select" +
-                    " studentNumber from TStudent where TUnit = (select TUnit from TTeacher where teaCode = :code)))";
+            hql += " and ta.publisherCode=:code or ta.publisherCode in" +
+                    "(select studentNumber from TStudent where TUnit = (select TUnit from TTeacher where teaCode = :code)))";
             Query query = getSessionFactory().getCurrentSession().createQuery(hql);
-             query.setString("code", teaCode);
+            query.setString("code", teaCode);
             if (null != announName && !announName.trim().equals("")) {
-                 query.setString("aName", "%" + announName + "%");
+                query.setString("aName", "%" + announName + "%");
             }
             if (null != announDate && !announDate.toString().trim().equals("")) {
-                 query.setDate("aDate", announDate);
+                query.setDate("aDate", announDate);
             }
-            System.out.println("unit-->" + hql);
             if (null != pageBean) {
                 query.setFirstResult(pageBean.getBeginIndex());
                 query.setMaxResults(pageBean.getPageCapibility());
             }
-            return  query.list();
+            return query.list();
         } catch (RuntimeException e) {
             log.error("query unit TAnnouncement failed: " + e);
             throw e;
@@ -225,35 +295,44 @@ public class TAnnouncementDAOImpl extends BaseDaoImpl<TAnnouncement> implements 
     }
 
 
-    public int findUnitAnnounCount(String teaCode, String announName,
-                                   Date announDate) {
+    /**
+     * 根据教师职工号 公告名称 公告时间查询公告数量
+     *
+     * @param teaCode    教师职工号
+     * @param announName 公告名称
+     * @param announDate 公告时间
+     * @return
+     */
+    @Override
+    public int getUnitAnnounCount(String teaCode, String announName,
+                                  Date announDate) {
         log.debug("finding unit TAnnouncement");
         try {
             String hql = "select count(*) from TAnnouncement ta where ta.isdeleted = 'N'";
             if (null != announName && !announName.trim().equals("")) {
                 hql += " and ta.announTitle like :aName";
             }
+
             if (null != announDate && !announDate.toString().trim().equals("")) {
                 hql += " and ta.publishTime between :aDate and :aDate + 1";
             }
-            hql += " and ta.publisherCode = tu.userId and ta.publisherCode in (select" +
-                    " teaCode from TTeacher where teaCode = :code or ta.publisherCode in (select" +
-                    " studentNumber from TStudent where TUnit = (select TUnit from TTeacher where teaCode = :code)))";
+            hql += " and ta.publisherCode in" +
+                    " (select teaCode from TTeacher where teaCode = :code or ta.publisherCode in " +
+                    "(select studentNumber from TStudent where TUnit = (select TUnit from TTeacher where teaCode = :code)))";
             Query query = getSessionFactory().getCurrentSession().createQuery(hql);
-             query.setString("code", teaCode);
+            query.setString("code", teaCode);
             if (null != announName && !announName.trim().equals("")) {
-                 query.setString("aName", "%" + announName + "%");
+                query.setString("aName", "%" + announName + "%");
             }
             if (null != announDate && !announDate.toString().trim().equals("")) {
-                 query.setDate("aDate", announDate);
+                query.setDate("aDate", announDate);
             }
-            List list =  query.list();
-            int count = 0;
-            if (list.size() > 0) {
-                count = new Integer("" + list.get(0));
+            List list = query.list();
+
+            if (list != null && list.size() > 0) {
+                return Integer.valueOf(list.get(0) + "");
             }
-            System.out.println("count--》" + count);
-            return count;
+            return 0;
         } catch (RuntimeException e) {
             log.error("query unit TAnnouncement count failed: " + e);
             throw e;
@@ -262,7 +341,7 @@ public class TAnnouncementDAOImpl extends BaseDaoImpl<TAnnouncement> implements 
     }
 
     /**
-     * TODO教务处查询公告
+     * 教务处查询公告
      *
      * @param announName
      * @param announDate
@@ -271,55 +350,61 @@ public class TAnnouncementDAOImpl extends BaseDaoImpl<TAnnouncement> implements 
      * @param pageBean
      * @return
      */
-    @NotNull
-    public List findSchoolAnnoun(String announName, String checkState,
-                                 Date announDate, String publisherName, String typeName,
-                                 PageBean pageBean) {
+    @Override
+    public List getSchoolAnnoun(String announName, String checkState,
+                                Date announDate, String publisherName, String typeName,
+                                PageBean pageBean) {
         log.debug("find school TAnnouncements ");
         try {
-            String hql = "select new TAnnouncementModel(ta, tu.userName) from TAnnouncement ta, TUser tu where" +
-                    " ta.isdeleted = 'N' and ta.publisherCode = tu.userId";
+            String hql = "from TAnnouncement ta where ta.isdeleted = 'N'";
+
+
             if (null != announName && !announName.trim().equals("")) {
                 hql += " and ta.announTitle like :aName";
             }
             if (null != checkState && !checkState.trim().equals("") && !checkState.trim().equals("ALL")) {
                 hql += " and ta.checkState =:aState";
-            }
-            if (null != checkState && checkState.trim().equals("ALL")) {
+            } else if (null != checkState && checkState.trim().equals("ALL")) {
                 hql += " and ta.checkState is not null";
             }
+
+
             if (null != announDate && !announDate.toString().trim().equals("")) {
                 hql += " and ta.publishTime between :aDate and :aDate + 1";
             }
+
             if (null != publisherName && !publisherName.trim().equals("")) {
                 hql += " and ta.publisherCode in (select userId from TUser where userName like :uName)";
             }
+
             if (null != typeName && !typeName.trim().equals("00")) {
                 hql += " and ta.TAnnounType.announTypeName like :tName";
             }
+
             hql += " order by ta.publishTime desc";
             Query query = getSessionFactory().getCurrentSession().createQuery(hql);
 
+
             if (null != announName && !announName.trim().equals("")) {
-                 query.setString("aName", "%" + announName + "%");
+                query.setString("aName", "%" + announName + "%");
             }
             if (null != checkState && !checkState.trim().equals("") && !checkState.trim().equals("ALL")) {
-                 query.setString("aState", checkState);
+                query.setString("aState", checkState);
             }
             if (null != announDate && !announDate.toString().trim().equals("")) {
-                 query.setDate("aDate", announDate);
+                query.setDate("aDate", announDate);
             }
             if (null != publisherName && !publisherName.trim().equals("")) {
-                 query.setString("uName", "%" + publisherName + "%");
+                query.setString("uName", "%" + publisherName + "%");
             }
             if (null != typeName && !typeName.trim().equals("00")) {
-                 query.setString("tName", "%" + typeName + "%");
+                query.setString("tName", "%" + typeName + "%");
             }
             if (null != pageBean) {
                 query.setFirstResult(pageBean.getBeginIndex());
                 query.setMaxResults(pageBean.getPageCapibility());
             }
-            return  query.list();
+            return query.list();
         } catch (RuntimeException e) {
             log.error("find school TAnnouncement " + e);
             throw e;
@@ -327,9 +412,19 @@ public class TAnnouncementDAOImpl extends BaseDaoImpl<TAnnouncement> implements 
 
     }
 
-
-    public int findSchoolAnnounCount(String announName, String checkState,
-                                     Date announDate, String publisherName, String typeName) {
+    /**
+     * 查询学校公告数量
+     *
+     * @param announName
+     * @param checkState
+     * @param announDate
+     * @param publisherName
+     * @param typeName
+     * @return
+     */
+    @Override
+    public int getSchoolAnnounCount(String announName, String checkState,
+                                    Date announDate, String publisherName, String typeName) {
         log.debug("find school count TAnnouncements ");
         try {
             String hql = "select count(*) from TAnnouncement ta where ta.isdeleted = 'N'";
@@ -354,139 +449,42 @@ public class TAnnouncementDAOImpl extends BaseDaoImpl<TAnnouncement> implements 
             }
             Query query = getSessionFactory().getCurrentSession().createQuery(hql);
             if (null != announName && !announName.trim().equals("")) {
-                 query.setString("aName", "%" + announName + "%");
+                query.setString("aName", "%" + announName + "%");
             }
             if (null != checkState && !checkState.trim().equals("") && !checkState.trim().equals("ALL")) {
-                 query.setString("aState", checkState);
+                query.setString("aState", checkState);
             }
             if (null != announDate && !announDate.toString().trim().equals("")) {
-                 query.setDate("aDate", announDate);
+                query.setDate("aDate", announDate);
             }
             if (null != publisherName && !publisherName.trim().equals("")) {
-                 query.setString("uName", "%" + publisherName + "%");
+                query.setString("uName", "%" + publisherName + "%");
             }
             if (null != typeName && !typeName.trim().equals("00")) {
-                 query.setString("tName", "%" + typeName + "%");
+                query.setString("tName", "%" + typeName + "%");
             }
-            List list =  query.list();
-            int count = 0;
-            if (list.size() > 0) {
-                count = new Integer("" + list.get(0));
+            List list = query.list();
+
+            if (list != null && list.size() > 0) {
+                return Integer.valueOf(list.get(0) + "");
             }
-            System.out.println("school query count-->" + count);
-            return count;
+            return 0;
         } catch (RuntimeException e) {
             log.error("find school count TAnnouncement " + e);
             throw e;
         }
     }
 
-    /**
-     *
-     * @param code     学生学号/指导老师教职工号
-     * @param pageBean return List
-     */
-
-    public List getStuTeaAnnounctment(String code, PageBean pageBean) {
-        log.debug("finding all person TAnnouncement instances by pageBeanun");
-        try {// as publisherName
-            String hql = "select new TAnnouncementModel(ta, tu.userName) from TAnnouncement ta, TUser tu where" +
-                    " ta.isdeleted = 'N' and ta.publisherCode = tu.userId and ta.publisherCode = :code";
-            Query query = getSessionFactory().getCurrentSession().createQuery(hql);
-            query.setString("code", code);
-            if (null != pageBean) {
-                query.setFirstResult(pageBean.getBeginIndex());
-                query.setMaxResults(pageBean.getPageCapibility());
-            }
-            return  query.list();
-        } catch (RuntimeException e) {
-            log.error("find all failed", e);
-            throw e;
-        }
-    }
-
-
-    public int getStuTeaAnnouncementCount(String code) {
-        log.debug("finding all person TAnnouncement count");
-        try {
-            String queryStr = "select count(*) from TAnnouncement as t where t.isdeleted='N' and t.publisherCode=:code";
-            Query query = getSessionFactory().getCurrentSession().createQuery(queryStr);
-            query.setString("code", code);
-            List tmpList = query.list();
-            int count = 0;
-            if (tmpList.size() > 0) {
-                count = new Integer("" + tmpList.get(0));
-            }
-            return count;
-
-        } catch (RuntimeException e) {
-            log.error("find my count  failed", e);
-            throw e;
-        }
-    }
 
     /**
-     * 学员主管教师获取属于一个学院的公告
-     *
-     * @param unitTeaCode 学院主管老师的教职工号
-     * @param pageBean    return List
+     * @param unitStuCode
+     * @param announTitle
+     * @param publishTime
+     * @param pageBean
+     * @return
      */
-    @NotNull
-    public List getUnitAnnounctment(String unitTeaCode, PageBean pageBean) {
-        log.debug("finding unit all TAnnouncement instances by pageBeanun");
-        return findUnitAnnoun(unitTeaCode, null, null, pageBean);
-    }
-
-    public int getUnitAnnounctmentCount(String unitTeaCode) {
-        log.debug("finding unit all TAnnouncement instances by pageBeanun");
-        return findUnitAnnounCount(unitTeaCode, null, null);
-    }
-
-    //通过当前学生所在学院获取学院公告
-    @NotNull
-    public List getUnitAnnounctmentByStuCode(String unitStuCode, PageBean pageBean) {
-        log.debug("getting unit all TAnnouncement instances by pageBeanun");
-        try {
-            String queryStr = "from TAnnouncement t where t.isdeleted = 'N' and t.publishState = 'Y' and t.publisherCode in " +
-                    "(select tt.teaCode from TTeacher tt where tt.TUnit.unitId = " +
-                    "(select s.TUnit.unitId from TStudent s where s.TUser.userId =:unitStuCode) " +
-                    "and tt.teaCode in (select u.userId from TUser u where u.userType = '02' or u.userType = '03'))";
-            Query query = getSessionFactory().getCurrentSession().createQuery(queryStr);
-            query.setString("unitStuCode", unitStuCode);
-            query.setFirstResult(pageBean.getBeginIndex());
-            query.setMaxResults(pageBean.getPageCapibility());
-            return query.list();
-        } catch (RuntimeException e) {
-            log.error("get unit all TAnnouncement failed", e);
-            throw e;
-        }
-    }
-
-
-    public int getUnitAnnounctmentByStuCodeCount(String unitStuCode) {
-        log.debug("getting unit all TAnnouncement count instances by pageBean");
-        try {
-            String queryStr = "select count(*) from TAnnouncement t where t.isdeleted = 'N' and t.publishState = 'Y' and t.publisherCode in " +
-                    "(select tt.teaCode from TTeacher tt where tt.TUnit.unitId = " +
-                    "(select s.TUnit.unitId from TStudent s where s.TUser.userId =:unitStuCode) " +
-                    "and tt.teaCode in (select u.userId from TUser u where u.userType = '02' or u.userType = '03'))";
-            Query query = getSessionFactory().getCurrentSession().createQuery(queryStr);
-            query.setString("unitStuCode", unitStuCode);
-            List tmpList = query.list();
-            int count = 0;
-            if (tmpList.size() > 0) {
-                count = new Integer("" + tmpList.get(0));
-            }
-            return count;
-        } catch (RuntimeException e) {
-            log.error("get unit all TAnnouncement count failed", e);
-            throw e;
-        }
-    }
-
-    //查询当前学生所在学院的学院公告
-
-    public List findUnitAnnounctmentByStuCode(String unitStuCode, String announTitle, Date publishTime, PageBean pageBean) {
+    @Override
+    public List getUnitAnnounctmentByStuCode(String unitStuCode, String announTitle, Date publishTime, PageBean pageBean) {
         log.debug("finding unit all TAnnouncement instances by pageBean");
         try {
             String queryStr = "from TAnnouncement t where t.isdeleted = 'N' and t.publishState = 'Y' and t.publisherCode in " +
@@ -519,7 +517,8 @@ public class TAnnouncementDAOImpl extends BaseDaoImpl<TAnnouncement> implements 
     }
 
 
-    public int findUnitAnnounctmentByStuCodeCount(String unitStuCode, String announTitle, Date publishTime) {
+    @Override
+    public int getUnitAnnounctmentByStuCodeCount(String unitStuCode, String announTitle, Date publishTime) {
         log.debug("finding unit all TAnnouncement count instances by pageBeanun");
         try {
             String queryStr = "select count(*) from TAnnouncement t where t.isdeleted = 'N' and t.publishState = 'Y' and t.publisherCode in " +
@@ -554,45 +553,17 @@ public class TAnnouncementDAOImpl extends BaseDaoImpl<TAnnouncement> implements 
         }
     }
 
-    //获取普通学生和普通教师的公告
 
-    public List getCommonStuAndTeaAnnoun(PageBean pageBean) {
-        log.debug("getting common student and teacher TAnnouncement instances by pageBeanun");
-        try {
-            String queryStr = "from TAnnouncement t where t.isdeleted = 'N' and t.publishState = 'Y' and t.publisherCode in " +
-                    "(select u.userId from TUser u where u.userType = '04' or u.userType = '05' or u.userType = '06' or u.userType = '07' or u.userType = '08')";
-            Query query = getSessionFactory().getCurrentSession().createQuery(queryStr);
-            query.setFirstResult(pageBean.getBeginIndex());
-            query.setMaxResults(pageBean.getPageCapibility());
-            return query.list();
-        } catch (RuntimeException e) {
-            log.error("get common student and teacher TAnnouncement failed", e);
-            throw e;
-        }
-    }
-
-
-    public int getCommonStuAndTeaAnnounCount() {
-        log.debug("getting common student and teacher TAnnouncement count instances by pageBeanun");
-        try {
-            String queryStr = "select count(*) from TAnnouncement t where t.isdeleted = 'N' and t.publishState = 'Y' and t.publisherCode in " +
-                    "(select u.userId from TUser u where u.userType = '04' or u.userType = '05' or u.userType = '06' or u.userType = '07' or u.userType = '08')";
-            Query query = getSessionFactory().getCurrentSession().createQuery(queryStr);
-            List tmpList = query.list();
-            int count = 0;
-            if (tmpList.size() > 0) {
-                count = new Integer("" + tmpList.get(0));
-            }
-            return count;
-        } catch (RuntimeException e) {
-            log.error("get common student and teacher count TAnnouncement failed", e);
-            throw e;
-        }
-    }
-
-    //查询普通学生和普通教师的公告
-
-    public List findCommonStuAndTeaAnnoun(String announTitle, String announContent, Date publishTime, PageBean pageBean) {
+    /**
+     *
+     * @param announTitle
+     * @param announContent
+     * @param publishTime
+     * @param pageBean
+     * @return
+     */
+    @Override
+    public List getCommonStuAndTeaAnnoun(String announTitle, String announContent, Date publishTime, PageBean pageBean) {
         log.debug("finding common student and teacher TAnnouncement instances by pageBeanun");
         try {
             String queryStr = "from TAnnouncement t where t.isdeleted = 'N' and t.publishState = 'Y' and t.publisherCode in " +
@@ -626,8 +597,15 @@ public class TAnnouncementDAOImpl extends BaseDaoImpl<TAnnouncement> implements 
         }
     }
 
-
-    public int findCommonStuAndTeaAnnounCount(String announTitle, String announContent, Date publishTime) {
+    /**
+     *
+     * @param announTitle
+     * @param announContent
+     * @param publishTime
+     * @return
+     */
+    @Override
+    public int getCommonStuAndTeaAnnounCount(String announTitle, String announContent, Date publishTime) {
         log.debug("finding common student and teacher TAnnouncement count instances by pageBeanun");
         try {
             String queryStr = "select count(*) from TAnnouncement t where t.isdeleted = 'N' and t.publishState = 'Y' and t.publisherCode in " +
@@ -664,142 +642,6 @@ public class TAnnouncementDAOImpl extends BaseDaoImpl<TAnnouncement> implements 
             log.error("find common student and teacher count TAnnouncement failed", e);
             throw e;
         }
-    }
-
-    /**
-     * 教务处主管老师获取所有未删除的公告
-     *
-     * @param pageBean return List
-     */
-    @NotNull
-    public List getSchoolAnnounctment(PageBean pageBean) {
-        log.debug("finding all School TAnnouncement instances by pageBeanun");
-        try {
-            String hql = "select new TAnnouncementModel(ta, tu.userName) from TAnnouncement ta, TUser tu" +
-                    " where ta.isdeleted = 'N' and ta.publisherCode = tu.userId and ta.checkState is not null" +
-                    " order by ta.publishTime desc";
-            Query query = getSessionFactory().getCurrentSession().createQuery(hql);
-            if (null != pageBean) {
-                query.setFirstResult(pageBean.getBeginIndex());
-                query.setMaxResults(pageBean.getPageCapibility());
-            }
-            return query.list();
-        } catch (RuntimeException e) {
-            log.error("find all School failed", e);
-            throw e;
-        }
-    }
-
-
-    public int getSchoolAnnounctmentCount() {
-        log.debug("finding all School TAnnouncement count");
-        try {
-            String hql = "select count(*) from TAnnouncement ta where ta.isdeleted = 'N'" +
-                    " and ta.checkState is not null";
-            Query query = getSessionFactory().getCurrentSession().createQuery(hql);
-            List tmpList =  query.list();
-            int count = 0;
-            if (tmpList.size() > 0) {
-                count = new Integer("" + tmpList.get(0));
-            }
-            return count;
-        } catch (RuntimeException e) {
-            log.error("find all School count failed", e);
-            throw e;
-        }
-    }
-
-    /**
-     * TODO根据公告类别获取公告的ID，名称
-     *
-     * @param typeName 公告类别名称
-     * @return
-     */
-    @NotNull
-    public List findAnnounByType(String typeName, PageBean pageBean) {
-        log.debug("find TAnnouncement by type");
-        return findIndexSchoolAnnoument(null, null, typeName, pageBean);
-    }
-
-    public int findAnnounByTypeCount(String typeName) {
-        log.debug("find TAnnouncement count by type");
-        return findIndexSchoolAnnoumentCount(null, null, typeName);
-    }
-
-    //查询主页学校公告
-    @NotNull
-    public List findIndexSchoolAnnoument(String announTitle, Date publishTime, String typeName, PageBean pageBean) {
-        log.debug("find TAnnouncement by type");
-        try {
-            String hql = "select new TAnnouncementModel(ta, tu.userName) from TAnnouncement ta, TUser tu where" +
-                    " ta.isdeleted = 'N' and ta.publishState = 'Y' and ta.publisherCode = tu.userId and" +
-                    " ta.TAnnounType.announTypeName like :tName";
-            if (null != announTitle && !announTitle.trim().equals("")) {
-                hql += " and ta.announTitle like :announTitle";
-            }
-            if (null != publishTime && !publishTime.toString().trim().equals("")) {
-                hql += " and ta.publishTime between :publishTime and :publishTime + 1";
-            }
-
-            Query query = getSessionFactory().getCurrentSession().createQuery(hql);
-
-            if (null != announTitle && !announTitle.trim().equals("")) {
-                 query.setString("announTitle", "%" + announTitle + "%");
-            }
-
-            if (null != publishTime && !publishTime.toString().trim().equals("")) {
-                 query.setDate("publishTime", publishTime);
-            }
-
-             query.setString("tName", "%" + typeName + "%");
-             if (null != pageBean) {
-                 query.setFirstResult(pageBean.getBeginIndex());
-                 query.setMaxResults(pageBean.getPageCapibility());
-             }
-            return  query.list();
-        } catch (RuntimeException e) {
-            log.error("find announcement by type failed " + e);
-            throw e;
-        }
-    }
-
-
-    public int findIndexSchoolAnnoumentCount(String announTitle, Date publishTime, String typeName) {
-        log.debug("find TAnnouncement count by type");
-        try {
-            String hql = "select count(*) from TAnnouncement where isdeleted = 'N'" +
-                    " and publishState = 'Y' and TAnnounType.announTypeName like :tName";
-            if (null != announTitle && !announTitle.trim().equals("")) {
-                hql += " and ta.announTitle like :announTitle";
-            }
-            if (null != publishTime && !publishTime.toString().trim().equals("")) {
-                hql += " and ta.publishTime between :publishTime and :publishTime + 1";
-            }
-            Query query = getSessionFactory().getCurrentSession().createQuery(hql);
-            if (null != announTitle && !announTitle.trim().equals("")) {
-                 query.setString("announTitle", "%" + announTitle + "%");
-            }
-
-            if (null != publishTime && !publishTime.toString().trim().equals("")) {
-                 query.setDate("publishTime", publishTime);
-            }
-            query.setString("tName", "%" + typeName + "%");
-            List list =  query.list();
-            int count = 0;
-            if (list.size() > 0) {
-                count = new Integer("" + list.get(0));
-            }
-            return count;
-        } catch (RuntimeException e) {
-            log.error("find announcement count by type failed " + e);
-            throw e;
-        }
-
-    }
-
-    public static TAnnouncementDAO getFromApplicationContext(
-            ApplicationContext ctx) {
-        return (TAnnouncementDAO) ctx.getBean("TAnnouncementDAO");
     }
 
 }
